[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cherrypick-core"
version = "0.1.0"
description = "Shared core library for the Cherrypick trading suite (auth, dxfeed, fees, risk, calendar, paper, gex, ...). Imports as the cherrypick.core namespace package."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["keyring>=24"]

# tastytrade is a runtime dependency of consumers, not of importing the library: auth.session
# imports it lazily (only when building a real session), so cherrypick-core imports and unit-tests
# without it. Install the `broker` extra where a live Session is actually constructed.
[project.optional-dependencies]
broker = ["tastytrade>=12"]
dev = ["pytest>=8", "ruff>=0.6"]

[tool.setuptools.packages.find]
# Native namespace package: `cherrypick` has no __init__.py; discovery must include namespaces so
# `cherrypick.core` (and its subpackages) are found. Sibling distributions (cherrypick-meic, ...)
# will contribute other subpackages under the same `cherrypick` namespace.
include = ["cherrypick*"]
namespaces = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I import-sorting, UP pyupgrade, B bugbear — high-signal, low-noise.
select = ["E", "F", "I", "W", "UP", "B"]
